match font size spacing and height, add border bottom on hover and caret

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     <title>Tim Hortons - Sign Up</title>
   </head>
   <header>
-    <ul id="top-nav">
-      <li><a href="#">Order</a></li>
-      <li><a href="#">Catering</a></li>
-      <li><a href="#">More</a></li>
-    </ul>
+    <nav id="left-nav">
+      <ul>
+        <li><a href="#">Order</a></li>
+        <li><a href="#">Catering</a></li>
+        <li>
+          <a href="#">More <i class="fas fa-caret-down"></i></a>
+        </li>
+      </ul>
+    </nav>
     <img id="logo" src="th-logo.svg" alt="logo" />
-    <button id="login" type="submit">Log In</button>
+    <div id="right-header">
+      <button id="login" type="submit">Log In</button>
+    </div>
   </header>
   <div id="lower-nav">
     <div id="order-pref">
