add cart button and hover states for nav buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     </nav>
     <img id="logo" src="th-logo.svg" alt="logo" />
     <div id="right-header">
-      <button id="login" type="submit">Log In</button>
+      <button class="nav-button" id="login">Log In</button>
+      <button class="nav-button" id="cart">
+        <i class="fas fa-shopping-bag"></i> 0
+      </button>
     </div>
   </header>
   <div id="lower-nav">
