bottom nav match designs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <span id="change">Change</span>
     </div>
     <div id="language-region">
-      <i class="fal fa-globe"></i>
+      <i class="fas fa-globe"></i>
       EN/CA
     </div>
   </div>
