--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <i class="fas fa-shopping-bag"></i> 0
         </button>
       </div>
+      <i id="account" class="far fa-user"></i>
     </header>
     <div id="lower-nav">
       <div id="order-pref">
