--- a/index.html
+++ b/index.html
@@ -93,14 +93,73 @@
           <label for="terms-of-service">
             I agree to the following:
             <span class="red"
-              >Privacy Policy Tims Rewards Terms and Conditions Terms of
-              Service</span
+              ><a href="#">Privacy Policy,</a><br />
+              <a href="#">Tims Rewards Terms and Conditions,</a>
+              <a href="#">Terms of Service</a></span
             >
           </label>
         </div>
 
         <button type="submit">Sign Up</button>
       </form>
+      <div id="not-yours">
+        <p>Not your computer? Please make sure to log out before you leave</p>
+      </div>
     </main>
+    <footer>
+      <div id="footer-grid">
+        <div class="footer-tiles">
+          <h5>Careers</h5>
+          Come join the team<br /><a href="#" class="upper-footer-link"
+            >Browse Opportunities</a
+          >
+        </div>
+        <div class="footer-tiles">
+          <h5>Community</h5>
+          Make a true difference <br /><a href="#" class="upper-footer-link"
+            >Learn More</a
+          >
+        </div>
+        <div class="footer-tiles">
+          <h5>Find a Tim Hortons</h5>
+          We can't wait to serve you <br /><a href="#" class="upper-footer-link"
+            >Store Locator</a
+          >
+        </div>
+        <div class="footer-tiles">
+          <a href="#" class="bottom-footer-link">Franchising</a>
+          <a href="#" class="bottom-footer-link">Investors</a>
+          <a href="#" class="bottom-footer-link">Contact Us</a>
+          <a href="#" class="bottom-footer-link">Frequently Asked Questions</a>
+        </div>
+        <div class="footer-tiles">
+          <a href="#" class="bottom-footer-link">Privacy Policy</a>
+          <a href="#" class="bottom-footer-link">Terms of Service</a>
+          <a href="#" class="bottom-footer-link">Trademarks</a>
+          <a href="#" class="bottom-footer-link">Notice Accessibility</a>
+          <a href="#" class="bottom-footer-link">Diagnostics</a>
+        </div>
+        <div class="footer-tiles">
+          <h5>Connect with Us</h5>
+          <div id="socials">
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-facebook-f"></i></a>
+            </div>
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-youtube"></i></a>
+            </div>
+            <div class="social-icons">
+              <a href="#"><i class="fab fa-instagram"></i></a>
+            </div>
+          </div>
+        </div>
+        <div class="footer-tiles-3">TM & © Tim Hortons, 2020</div>
+        <div class="footer-tiles-3"></div>
+        <div class="footer-tiles-3"><i class="fas fa-globe"></i> EN/CA</div>
+      </div>
+    </footer>
   </body>
 </html>
