hide not your computer text on small screens

--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
 
         <button type="submit">Sign Up</button>
       </form>
-      <div id="not-yours">
-        <p>Not your computer? Please make sure to log out before you leave</p>
-      </div>
+
+      <p id="not-yours">
+        Not your computer? Please make sure to log out before you leave
+      </p>
     </main>
     <footer>
       <div id="footer-grid">
