quick and dirty solution

--- a/index.html
+++ b/index.html
@@ -13,35 +13,37 @@
     <title>Tim Hortons - Sign Up</title>
   </head>
   <body>
-    <header>
-      <nav id="left-nav">
-        <ul>
-          <li><a href="#">Order</a></li>
-          <li><a href="#">Catering</a></li>
-          <li>
-            <a href="#">More <i class="fas fa-caret-down"></i></a>
-          </li>
-        </ul>
-      </nav>
-      <img id="logo" src="th-logo.svg" alt="logo" />
-      <div id="right-header">
-        <button class="nav-button" id="login">Log In</button>
-        <button class="nav-button" id="cart">
-          <i class="fas fa-shopping-bag"></i> 0
-        </button>
+    <section id="fixed-header">
+      <header>
+        <nav id="left-nav">
+          <ul>
+            <li><a href="#">Order</a></li>
+            <li><a href="#">Catering</a></li>
+            <li>
+              <a href="#">More <i class="fas fa-caret-down"></i></a>
+            </li>
+          </ul>
+        </nav>
+        <img id="logo" src="th-logo.svg" alt="logo" />
+        <div id="right-header">
+          <button class="nav-button" id="login">Log In</button>
+          <button class="nav-button" id="cart">
+            <i class="fas fa-shopping-bag"></i> 0
+          </button>
+        </div>
+        <i id="account" class="far fa-user"></i>
+      </header>
+      <div id="lower-nav">
+        <div id="order-pref">
+          How would you like to receive this order?
+          <span id="change">Change</span>
+        </div>
+        <div id="language-region">
+          <i class="fas fa-globe"></i>
+          EN/CA
+        </div>
       </div>
-      <i id="account" class="far fa-user"></i>
-    </header>
-    <div id="lower-nav">
-      <div id="order-pref">
-        How would you like to receive this order?
-        <span id="change">Change</span>
-      </div>
-      <div id="language-region">
-        <i class="fas fa-globe"></i>
-        EN/CA
-      </div>
-    </div>
+    </section>
 
     <main>
       <h1>Start earning rewards</h1>
