make html more semantic

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Tim Hortons - Sign Up</title>
   </head>
   <body>
-    <section id="fixed-header">
-      <header>
+    <header>
+      <div id="header-top">
         <nav id="left-nav">
           <ul>
             <li><a href="#">Order</a></li>
@@ -32,7 +32,7 @@
           </button>
         </div>
         <i id="account" class="far fa-user"></i>
-      </header>
+      </div>
       <div id="lower-nav">
         <div id="order-pref">
           How would you like to receive this order?
@@ -43,7 +43,7 @@
           EN/CA
         </div>
       </div>
-    </section>
+    </header>
 
     <main>
       <h1>Start earning rewards</h1>
