make css more semantic

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <i id="account" class="far fa-user"></i>
       </div>
-      <div id="lower-nav">
+      <div id="header-bottom">
         <div id="order-pref">
           How would you like to receive this order?
           <span id="change">Change</span>
