--- a/index.html
+++ b/index.html
@@ -61,11 +61,23 @@
           <label for="country">Country *</label>
         </div>
         <div class="form-field">
-          <input type="email" name="email" id="email" required />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email"
+            required
+          />
           <label for="email">Email Address *</label>
         </div>
         <div class="form-field">
-          <input type="text" name="name" id="name" required />
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Name"
+            required
+          />
           <label for="name">Name *</label>
         </div>
 
