added form validation

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div>Already have an account?</div>
         <a href="#">Sign In</a>
       </div>
-      <form>
+      <form id="form" novalidate>
         <div class="form-field">
           <select name="country" id="country" required>
             <option value="CAN">Canada</option>
@@ -68,7 +68,9 @@
             placeholder="Email"
             required
           />
+
           <label for="email">Email Address *</label>
+          <div class="error-message"></div>
         </div>
         <div class="form-field">
           <input
@@ -79,6 +81,7 @@
             required
           />
           <label for="name">Name *</label>
+          <div class="error-message"></div>
         </div>
 
         <div id="optional-information">
@@ -96,8 +99,7 @@
             other information about Tim Hortons. (Optional)
           </label>
         </div>
-
-        <div class="checkbox-field">
+        <div class="checkbox-field" id="privacy">
           <input
             type="checkbox"
             name="terms-of-service"
@@ -112,6 +114,7 @@
               <a href="#">Terms of Service</a></span
             >
           </label>
+          <div class="error-message"></div>
         </div>
 
         <button type="submit">Sign Up</button>
@@ -169,5 +172,7 @@
         <div class="footer-tiles-3"><i class="fas fa-globe"></i> EN/CA</div>
       </div>
     </footer>
+
+    <script src="script.js"></script>
   </body>
 </html>
