--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/menu.css" />
+    <link rel="stylesheet" href="css/signup.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <script
       src="https://kit.fontawesome.com/0a079e4901.js"
@@ -48,7 +48,93 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <h1>Start earning rewards</h1>
+      <h2>Create an Account</h2>
+      <div id="existing-account">
+        <div>Already have an account?</div>
+        <a href="#">Sign In</a>
+      </div>
+      <form id="form" novalidate>
+        <div class="form-field">
+          <select name="country" id="country" required>
+            <option value="CAN">Canada</option>
+            <option value="USA">United States</option>
+          </select>
+          <label for="country">Country *</label>
+        </div>
+        <div class="form-field">
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email"
+            required
+          />
+
+          <label for="email">Email Address *</label>
+          <div class="error-message"></div>
+        </div>
+        <div class="form-field">
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Name"
+            required
+          />
+          <label for="name">Name *</label>
+          <div class="error-message"></div>
+        </div>
+
+        <div id="optional-information">
+          <span>Optional Information</span> <i class="fas fa-angle-down"></i>
+        </div>
+        <div class="form-field">
+          <div class="checkbox-field">
+            <input
+              type="checkbox"
+              name="promotional-emails"
+              id="promotional-emails"
+            />
+            <div class="label-container">
+              <label for="promotional-emails">
+                Yes! I want to receive promotional emails about special offers
+                and other information about Tim Hortons. (Optional)
+              </label>
+              <div class="error-message"></div>
+            </div>
+          </div>
+        </div>
+        <div class="form-field">
+          <div class="checkbox-field" id="privacy">
+            <input
+              type="checkbox"
+              name="terms-of-service"
+              id="terms-of-service"
+              required
+            />
+            <div class="label-container">
+              <label for="terms-of-service">
+                I agree to the following:
+                <span class="red"
+                  ><a href="#">Privacy Policy,</a><br />
+                  <a href="#">Tims Rewards Terms and Conditions,</a>
+                  <a href="#">Terms of Service</a></span
+                >
+              </label>
+              <div class="error-message"></div>
+            </div>
+          </div>
+        </div>
+
+        <button type="submit">Sign Up</button>
+      </form>
+
+      <p id="not-yours">
+        Not your computer? Please make sure to log out before you leave
+      </p>
+    </main>
 
     <footer>
       <div id="footer-grid">
