pull menu from sanity

--- a/signup.html
+++ b/signup.html
@@ -184,6 +184,6 @@
       </div>
     </footer>
 
-    <script src="javascript/script.js"></script>
+    <script src="javascript/signup.js"></script>
   </body>
 </html>
