--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
     ></script>
-    <title>Tim Hortons - Sign Up</title>
+    <title>Tim Hortons - Menu</title>
   </head>
   <body>
     <header>
@@ -48,7 +48,10 @@
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <h1>Menu</h1>
+      <section id="categories"></section>
+    </main>
 
     <footer>
       <div id="footer-grid">
@@ -98,6 +101,6 @@
       </div>
     </footer>
 
-    <script src="javascript/script.js"></script>
+    <script src="javascript/menu.js"></script>
   </body>
 </html>
