match form fields to server response keys

--- a/public/signup.html
+++ b/public/signup.html
@@ -92,13 +92,9 @@
         </div>
         <div class="form-field">
           <div class="checkbox-field">
-            <input
-              type="checkbox"
-              name="promotional-emails"
-              id="promotional-emails"
-            />
+            <input type="checkbox" name="email_consent" id="email_consent" />
             <div class="label-container">
-              <label for="promotional-emails">
+              <label for="email_consent">
                 Yes! I want to receive promotional emails about special offers
                 and other information about Tim Hortons. (Optional)
               </label>
@@ -110,12 +106,12 @@
           <div class="checkbox-field" id="privacy">
             <input
               type="checkbox"
-              name="terms-of-service"
-              id="terms-of-service"
+              name="tos_consent"
+              id="tos_consent"
               required
             />
             <div class="label-container">
-              <label for="terms-of-service">
+              <label for="tos_consent">
                 I agree to the following:
                 <span class="red"
                   ><a href="#">Privacy Policy,</a><br />
