--- a/public/signup.html
+++ b/public/signup.html
@@ -62,6 +62,7 @@
             <option value="USA">United States</option>
           </select>
           <label for="country">Country *</label>
+          <div class="error-message"></div>
         </div>
         <div class="form-field">
           <input
