started otp with broken signup form

--- a/public/signup.html
+++ b/public/signup.html
@@ -114,11 +114,11 @@
             <div class="label-container">
               <label for="tos_consent">
                 I agree to the following:
-                <span class="red"
-                  ><a href="#">Privacy Policy,</a><br />
+                <span class="red">
+                  <a href="#">Privacy Policy,</a><br />
                   <a href="#">Tims Rewards Terms and Conditions,</a>
-                  <a href="#">Terms of Service</a></span
-                >
+                  <a href="#">Terms of Service</a>
+                </span>
               </label>
               <div class="error-message"></div>
             </div>
