--- a/public/confirm-otp.html
+++ b/public/confirm-otp.html
@@ -57,12 +57,7 @@
       </div>
       <form id="form" novalidate>
         <div class="form-field">
-          <input
-            type="text"
-            name="verification-code"
-            id="verification-code"
-            required
-          />
+          <input type="text" name="code" id="code" required />
           <div class="error-message"></div>
         </div>
       </form>
