--- a/public/confirm-otp.html
+++ b/public/confirm-otp.html
@@ -58,10 +58,9 @@
       <form id="form" novalidate>
         <div class="form-field">
           <input type="text" name="code" id="code" required />
-          <div class="error-message"></div>
+          <div id="error-message"></div>
         </div>
       </form>
-
       <p id="no-code">Didn't receive a code?</p>
     </main>
 
