--- a/public/confirm-otp.html
+++ b/public/confirm-otp.html
@@ -57,7 +57,13 @@
       </div>
       <form id="form" novalidate>
         <div class="form-field">
-          <input type="text" name="code" id="code" required />
+          <input
+            type="text"
+            name="code"
+            id="code"
+            autocomplete="off"
+            required
+          />
           <div id="error-message"></div>
         </div>
       </form>
