--- a/public/signup.html
+++ b/public/signup.html
@@ -182,5 +182,13 @@
     </footer>
 
     <script src="javascript/signup.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"
+    ></script>
+
+    <script type="text/javascript">
+      emailjs.init("user_C0PNrF65QnYy5WbnUlyV7");
+    </script>
   </body>
 </html>
