only validate code 6 chars or more

--- a/public/confirm-otp.html
+++ b/public/confirm-otp.html
@@ -62,6 +62,7 @@
             name="code"
             id="code"
             autocomplete="off"
+            maxlength="6"
             required
           />
           <div id="error-message"></div>
