--- a/public/signup.html
+++ b/public/signup.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/signup.css" />
+    <link rel="stylesheet" href="css/floating-inputs.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/main-size-and-centering.css" />
     <script
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
@@ -181,14 +183,13 @@
       </div>
     </footer>
 
-    <script src="javascript/signup.js"></script>
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"
     ></script>
-
     <script type="text/javascript">
       emailjs.init("user_C0PNrF65QnYy5WbnUlyV7");
     </script>
+    <script src="javascript/signup.js"></script>
   </body>
 </html>
