use button css in header

--- a/public/confirm-otp.html
+++ b/public/confirm-otp.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/button.css" />
     <script
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
@@ -31,8 +32,8 @@
         </nav>
         <img id="logo" src="images/th-logo.svg" alt="logo" />
         <div id="right-header">
-          <button class="nav-button" id="login">Log In</button>
-          <button class="nav-button" id="cart">
+          <button class="button inverse md" id="login">Log In</button>
+          <button class="button primary md" id="cart">
             <i class="fas fa-shopping-bag"></i> 0
           </button>
         </div>
@@ -49,6 +50,7 @@
         </div>
       </div>
     </header>
+
     <main>
       <h1>Verify with code</h1>
       <h2 id="instructions"></h2>
