--- a/public/signin.html
+++ b/public/signin.html
@@ -33,8 +33,8 @@
         </nav>
         <img id="logo" src="images/th-logo.svg" alt="logo" />
         <div id="right-header">
-          <button class="nav-button" id="login">Log In</button>
-          <button class="nav-button" id="cart">
+          <button class="button inverse md" id="login">Log In</button>
+          <button class="button primary md" id="cart">
             <i class="fas fa-shopping-bag"></i> 0
           </button>
         </div>
@@ -64,7 +64,7 @@
             placeholder="Email"
             required
           />
-          <label for="email">Email Address*</label>
+          <label for="email">Email Address *</label>
           <div class="error-message"></div>
         </div>
         <div class="button-wrapper">
