--- a/public/signup.html
+++ b/public/signup.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/floating-inputs.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/signup.css" />
+    <link rel="stylesheet" href="css/button.css" />
     <script
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
@@ -30,8 +31,8 @@
         </nav>
         <img id="logo" src="images/th-logo.svg" alt="logo" />
         <div id="right-header">
-          <button class="nav-button" id="login">Log In</button>
-          <button class="nav-button" id="cart">
+          <button class="button inverse md" id="login">Log In</button>
+          <button class="button primary md" id="cart">
             <i class="fas fa-shopping-bag"></i> 0
           </button>
         </div>
