--- a/public/signin.html
+++ b/public/signin.html
@@ -31,7 +31,9 @@
             </li>
           </ul>
         </nav>
-        <img id="logo" src="images/th-logo.svg" alt="logo" />
+        <a id="logo-link" href="/">
+          <img id="logo" src="images/th-logo.svg" alt="logo" />
+        </a>
         <div id="right-header">
           <button class="button inverse md" id="login">Log In</button>
           <button class="button primary md" id="cart">
