add links between pages and add outline button styles

--- a/public/confirm-otp.html
+++ b/public/confirm-otp.html
@@ -34,7 +34,7 @@
           <img id="logo" src="images/th-logo.svg" alt="logo" />
         </a>
         <div id="right-header">
-          <button class="button inverse md" id="login">Log In</button>
+          <a href="/signin.html" class="button inverse md" id="login">Log In</a>
           <button class="button primary md" id="cart">
             <i class="fas fa-shopping-bag"></i> 0
           </button>
