--- a/public/signin.html
+++ b/public/signin.html
@@ -35,7 +35,7 @@
           <img id="logo" src="images/th-logo.svg" alt="logo" />
         </a>
         <div id="right-header">
-          <button class="button inverse md" id="login">Log In</button>
+          <a href="/signin.html" class="button inverse md" id="login">Log In</a>
           <button class="button primary md" id="cart">
             <i class="fas fa-shopping-bag"></i> 0
           </button>
@@ -82,7 +82,7 @@
       </form>
       <p id="no-account">Don't have an account yet?</p>
       <div class="button-wrapper">
-        <a href="/signup.html" class="button inverse full-width lg">Sign Up</a>
+        <a href="/signup.html" class="button outline full-width lg">Sign Up</a>
       </div>
       <p id="not-yours">
         Not your computer? Please make sure to log out before you leave
