--- a/public/signup.html
+++ b/public/signup.html
@@ -33,7 +33,7 @@
           <img id="logo" src="images/th-logo.svg" alt="logo" />
         </a>
         <div id="right-header">
-          <button class="button inverse md" id="login">Log In</button>
+          <a href="/signin.html" class="button inverse md" id="login">Log In</a>
           <button class="button primary md" id="cart">
             <i class="fas fa-shopping-bag"></i> 0
           </button>
@@ -57,7 +57,7 @@
       <h2>Create an Account</h2>
       <div id="existing-account">
         <div>Already have an account?</div>
-        <a href="#">Sign In</a>
+        <a href="/signin.html">Sign In</a>
       </div>
       <form id="form" novalidate>
         <div class="form-field">
