--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,14 @@
           <img id="logo" src="images/th-logo.svg" alt="logo" />
         </a>
         <div id="right-header">
+          <a id="account" href="/account.html" class="button primary md hidden"
+            ><i class="far fa-user"></i
+          ></a>
           <a href="/signin.html" class="button inverse md" id="login">Log In</a>
           <button class="button primary md" id="cart">
             <i class="fas fa-shopping-bag"></i> 0
           </button>
         </div>
-        <i id="account" class="far fa-user"></i>
       </div>
       <div id="header-bottom">
         <div id="order-pref">
@@ -103,7 +105,7 @@
         <div class="footer-tiles-3"><i class="fas fa-globe"></i> EN/CA</div>
       </div>
     </footer>
-
     <script src="javascript/menu.js"></script>
+    <script src="javascript/user.js"></script>
   </body>
 </html>
