--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/global.css" />
     <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/loading-screen.css" />
     <link rel="stylesheet" href="css/menu.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/button.css" />
@@ -54,8 +55,14 @@
     </header>
 
     <main>
-      <h1>Menu</h1>
-      <section id="categories"></section>
+      <h1 class="hidden">Menu</h1>
+      <section id="categories">
+        <div id="loading">
+          <span><i class="fas fa-circle dot"></i></span>
+          <span><i class="fas fa-circle dot"></i></span>
+          <span><i class="fas fa-circle dot"></i></span>
+        </div>
+      </section>
     </main>
 
     <footer>
