display none on buttons

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,10 @@
           <img id="logo" src="images/th-logo.svg" alt="logo" />
         </a>
         <div id="right-header">
-          <a id="account" href="/account.html" class="button primary md hidden"
+          <a
+            id="account"
+            href="/account.html"
+            class="button primary md display-none"
             ><i class="far fa-user"></i
           ></a>
           <a href="/signin.html" class="button inverse md" id="login">Log In</a>
