--- a/public/signup.html
+++ b/public/signup.html
@@ -128,7 +128,9 @@
           </div>
         </div>
 
-        <button type="submit">Sign Up</button>
+        <button class="button primary lg full-width" type="submit">
+          Sign Up
+        </button>
       </form>
 
       <p id="not-yours">
