--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
     <main>
       <h1 class="hidden">Menu</h1>
       <section id="categories">
-        <div id="loading">
+        <div id="full-page-loading-container" class="loading red">
           <span><i class="fas fa-circle dot"></i></span>
           <span><i class="fas fa-circle dot"></i></span>
           <span><i class="fas fa-circle dot"></i></span>
