--- a/public/signup.html
+++ b/public/signup.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/signup.css" />
     <link rel="stylesheet" href="css/button.css" />
+    <link rel="stylesheet" href="css/loading-screen.css" />
     <script
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
@@ -128,7 +129,7 @@
           </div>
         </div>
 
-        <button class="button primary lg full-width" type="submit">
+        <button id="sign-up" class="button primary lg full-width" type="submit">
           Sign Up
         </button>
       </form>
