--- a/public/signin.html
+++ b/public/signin.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/floating-inputs.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/button.css" />
+    <link rel="stylesheet" href="css/loading-screen.css" />
     <script
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
