--- a/public/confirm-otp.html
+++ b/public/confirm-otp.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="css/header.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/button.css" />
+    <link rel="stylesheet" href="css/loading-screen.css" />
     <script
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
     ></script>
-    <title>Tim Hortons - Sign Up</title>
+    <title>Tim Hortons</title>
   </head>
 
   <body>
