refactor to use function

--- a/public/signin.html
+++ b/public/signin.html
@@ -143,6 +143,7 @@
     <script type="text/javascript">
       emailjs.init("user_C0PNrF65QnYy5WbnUlyV7");
     </script>
+    <script src="javascript/loading.js"></script>
     <script src="javascript/signin.js"></script>
   </body>
 </html>
