--- a/public/signup.html
+++ b/public/signup.html
@@ -194,6 +194,7 @@
     <script type="text/javascript">
       emailjs.init("user_C0PNrF65QnYy5WbnUlyV7");
     </script>
+    <script src="javascript/loading.js"></script>
     <script src="javascript/signup.js"></script>
   </body>
 </html>
