--- a/public/confirm-otp.html
+++ b/public/confirm-otp.html
@@ -122,7 +122,7 @@
         <div class="footer-tiles-3"><i class="fas fa-globe"></i> EN/CA</div>
       </div>
     </footer>
-
+    <script src="javascript/loading.js"></script>
     <script src="javascript/confirm-otp.js"></script>
   </body>
 </html>
