--- a/public/account.html
+++ b/public/account.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="css/floating-inputs.css" />
     <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/button.css" />
+    <link rel="stylesheet" href="css/account.css" />
     <script
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
     ></script>
-    <title>Tim Hortons - Sign In</title>
+    <title>Tim Hortons - My Account</title>
   </head>
 
   <body>
@@ -60,15 +61,54 @@
 
     <main>
       <h1>Account</h1>
+      <section id="account-options">
+        <ul>
+          <li>
+            <a href="#">
+              <span>Tims Rewards</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span>Account Info</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span>Payment Methods</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span>Recent Orders</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <span>Communications Preferences</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#" id="sign-out-link">
+              <span>Sign Out</span>
+              <i class="fas fa-chevron-right"></i>
+            </a>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
       <div id="footer-grid">
         <div class="footer-tiles">
           <h5>Careers</h5>
-          Come join the team<br /><a href="#" class="upper-footer-link"
-            >Browse Opportunities</a
-          >
+          Come join the team<br />
+          <a href="#" class="upper-footer-link">Browse Opportunities</a>
         </div>
         <div class="footer-tiles">
           <h5>Community</h5>
