--- a/public/buttons.html
+++ b/public/buttons.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/global.css" />
+    <script
+      src="https://kit.fontawesome.com/0a079e4901.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Buttons Demo</title>
   </head>
   <body>
