--- a/public/demo.html
+++ b/public/demo.html
@@ -10,10 +10,10 @@
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
     ></script>
-    <title>Buttons Demo</title>
+    <title>Demo</title>
   </head>
   <body>
     <div id="root"></div>
-    <script src="./javascript/buttons.js"></script>
+    <script src="./javascript/demo.js"></script>
   </body>
 </html>
