otp form validation plus button loading and font preloads

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,30 @@
       src="https://kit.fontawesome.com/0a079e4901.js"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="preload"
+      href="fonts/sofia_pro_regular.otf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="fonts/sofia_pro_bold.otf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="fonts/sofia_pro_black.otf"
+      as="font"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      href="fonts/greasepencil.otf"
+      as="font"
+      crossorigin="anonymous"
+    />
     <title>Tim Hortons</title>
   </head>
   <body>
