requried validations on blur and preload fonts and styles

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,10 @@
       as="font"
       crossorigin="anonymous"
     />
+    <link rel="preload" href="css/fonts.css" as="style" />
+    <link rel="preload" href="css/global.css" as="style" />
+    <link rel="stylesheet" href="css/fonts.css" />
+    <link rel="stylesheet" href="css/global.css" />
     <title>Tim Hortons</title>
   </head>
   <body>
