--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
     <link rel="preload" href="css/global.css" as="style" />
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <title>Tim Hortons</title>
   </head>
   <body>
